corrected spacing issues when screen size is small. chnaged fonts and added colors to improve visual appeal.

--- a/public/styles/champion.css
+++ b/public/styles/champion.css
@@ -1,10 +1,6 @@
 body {
-    /*background: #56ab2f;  /* fallback for old browsers */
-    /*background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);  /* Chrome 10-25, Safari 5.1-6 */
-    /*background: linear-gradient(to right, #a8e063, #56ab2f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ **/
-
-    font-family: 'Oswald', sans-serif;
-
+    background-color: #F5F4F0;
+    font-family: 'Asap', sans-serif
 }
 
 .jumbotron {
@@ -81,11 +77,12 @@ hr {
     font-size: 2.5rem;
     color: green;
     font-family: 'Dancing Script', cursive;
+   
 }
 
 #champions h1 {
     font-size: 4.5rem;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Arimo', sans-serif;
     color:white;
 }
 
@@ -94,8 +91,12 @@ hr {
     color: grey;
 }
 
+#champName h5 {
+    color: green;
+}
+
 #intoParagraph {
-    background-color: darkgreen;
+    background-color: black;
     color: white;
 }
 
@@ -106,3 +107,6 @@ hr {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+#intoPart1 {
+    background-color: darkgreen;
+}
